--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "require": {
         "phpunit/phpunit": "3.7.37"
+    },
+    "autoload": {
+        "psr-0": { "Issuu\\": "src/" }
     }
 }
