--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "signoramiailmio@robertodormepoco.org"
         }
     ],
-    "require": {
+    "require-dev": {
         "phpunit/phpunit": "3.7.37"
     },
     "autoload": {
